# rvp

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bookworm  README.md  TODO.md
examples/: main.rs
scaletempo2/: Cargo.toml  build.rs
scaletempo2/c/: Makefile  README.md  scaletempo2.h  scaletempo2_internal.c  scaletempo2_internal.h  scaletempo2_wrapper.c  test_scaletempo2.c
src/: audio.rs  hls.rs  lib.rs  overlay.rs  player.rs  state.rs
src/stream/: avfoundation.rs  ffmpeg.rs  mod.rs
src/subtitle/: ass.rs  mod.rs  srt.rs
