[package]
name = "rvp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a video player for egui"
repository = "https://github.com/v0l/rvp"
readme = "README.md"
authors = ["n00kii", "v0l"]
rust-version = "1.88"

[features]
default = ["default-overlay", "cpal", "ffmpeg"]
audio = ["dep:scaletempo2"]
cpal = ["audio", "dep:cpal"]
ffmpeg = ["dep:ffmpeg-rs-raw"]
avfoundation = ["dep:objc2-av-foundation", "dep:objc2", "dep:objc2-foundation"]
subtitles = ["dep:nom"]
hls = ["ffmpeg", "dep:m3u8-rs", "dep:ureq", "dep:url"]
default-overlay = []

[dependencies]
egui = "0.33"
anyhow = "1"
log = "0.4"
itertools = "0.14"

# audio
cpal = { version = "0.17", optional = true }
scaletempo2 = { path = "scaletempo2", optional = true }

# ffmpeg
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "755464b91b9a63a5c457ee8cdf03c31a1166c95a", optional = true }

# subtitle
nom = { version = "8.0", optional = true }

# hls
ureq = { version = "3.0", optional = true }
m3u8-rs = { version = "6.0", optional = true }
url = { version = "2.5", optional = true }

# avfoundation
objc2-av-foundation = { version = "0.3", optional = true, features = ["objc2-core-media"] }
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }

[dev-dependencies]
eframe = { version = "0.33", features = ["persistence"] }
env_logger = "0.11"
